tests/baselines/reference/declarationEmitMonorepoBaseUrl.errors.txt
/tsconfig.json(6,5): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /tsconfig.json (1 errors) ====
    {
      "compilerOptions": {
        "module": "nodenext",
        "declaration": true,
        "outDir": "temp",
        "baseUrl": "."
        ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
      }
    }
    
==== /packages/compiler-core/src/index.ts (0 errors) ====
    import { PluginConfig } from "@babel/parser";
    
==== /packages/compiler-sfc/src/index.ts (0 errors) ====
    import { createPlugin } from "@babel/parser";
    export function resolveParserPlugins() {
      return [createPlugin()];
    }
    
==== /node_modules/.pnpm/@babel+parser@7.23.6/node_modules/@babel/parser/package.json (0 errors) ====
    {
      "name": "@babel/parser",
      "version": "7.23.6",
      "main": "./lib/index.js",
      "types": "./typings/babel-parser.d.ts"
    }
    
==== /node_modules/.pnpm/@babel+parser@7.23.6/node_modules/@babel/parser/typings/babel-parser.d.ts (0 errors) ====
    export declare function createPlugin(): PluginConfig;
    export declare class PluginConfig {}
    
==== /packages/compiler-core/package.json (0 errors) ====
    {
      "name": "@vue/compiler-core",
      "version": "3.0.0",
      "main": "./src/index.ts",
      "dependencies": {
        "@babel/parser": "^7.0.0"
      }
    }
    
==== /packages/compiler-sfc/package.json (0 errors) ====
    {
      "name": "@vue/compiler-sfc",
      "version": "3.0.0",
      "main": "./src/index.ts",
      "dependencies": {
        "@babel/parser": "^7.0.0",
        "@vue/compiler-core": "^3.0.0"
      }
    }
    